--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 20px;
-    color: white;
-}
-
-.fixed-top {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: teal;
-    height: 60px;
-  }
-
 .instructions{
     background: lightgray;
     margin-top: 60px;
@@ -30,13 +14,6 @@
 }
 
 @media only screen and (max-width: 600px){
-    .fixed-top{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        height: 125px;
-        padding-left: 10px;
-    }
 
     .instructions{
         margin-top: 125px;
